# cuda-gtest

./: .gitignore  CMakeLists.txt
include/: vadd_api.h
include/add/: add.h  vadd.h
include/internal/kernel/: vadd_kernel.h
samples/: CMakeLists.txt  vadd_demo.cc  vadd_demo.cu
src/: CMakeLists.txt
src/add/: add.cc  add.cpp  vadd.cu
src/api/: vadd_api.cu
src/kernel/: vadd_kernel.cu
tests/: main.cpp
tests/add_cases/: TEST_add.cpp  TEST_vadd.cu
tests/cases/add/: TEST_add.cc
tests/cases/vadd/: TEST_vadd.cu
tests/inc/: testsuite_vadd.h
tests/src/: test_main.cc  testsuite_vadd.cc
tests/unit/: TEST_vadd_api.cc  TEST_vadd_api.cu  TEST_vadd_kernel.cc  TEST_vadd_kernel.cu
